--- a/css/main.css
+++ b/css/main.css
@@ -1673,7 +1673,6 @@ ul {
   font-weight: 500;
   line-height: 1.625;
   letter-spacing: 0.03em;
-  margin-left: 8px;
   padding-top: 5px;
   padding-left: 15px;
   padding-right: 15px;
@@ -1681,7 +1680,6 @@ ul {
   border: transparent;
   border-radius: 4px;
   padding: 6px 22px;
-  padding-bottom: 6px;
   border-radius: 4px;
   background-color: #f5f4fa;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1696,12 +1694,16 @@ ul {
   color: var(--title--text-color);
 }
 
-.button-item-list {
+.button-item {
+  margin-right: 8px;
+  z-index: 6;
   fill: var(--primary--bg-color);
 }
 
-.button-item-list:not(:last-child) {
-  margin-bottom: 15px;
+@media screen and (max-width: 767px) {
+  .button-item {
+    margin-bottom: 15px;
+  }
 }
 
 .item {
@@ -1717,7 +1719,7 @@ ul {
 
 @media screen and (min-width: 1200px) {
   .item {
-    padding-bottom: 56px;
+    padding-bottom: 50px;
   }
 }
 
