--- a/sass/components/_menu-btns.scss
+++ b/sass/components/_menu-btns.scss
@@ -33,7 +33,7 @@
     padding-bottom: 5px;
     border: transparent;
     border-radius: 4px;
-    padding: 8px 21px;
+    padding: 6px 22px;
     border-radius: 4px;
     background-color: #f5f4fa;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -48,30 +48,29 @@
     }
   }
   
-  .button-item-list{
+  .button-item{
+    margin-right: 8px;
+      z-index: 6;
     fill: var(--primary--bg-color);
-    &:not(:last-child){
-      // margin-bottom: 15px;
-    }
-    @media screen and (min-width: 768px){
-      margin: 0;
+    @media screen and (max-width: 767px){
+      margin-bottom: 15px;
     }
   }
-  
+    
   .item {
     margin: auto;
     padding-bottom: 40px;
     // padding-bottom: 56px;
     @media screen and (min-width: 768px){
-      padding-bottom: 36px;
+      padding-bottom: 30px;
     }
     @media screen and (min-width: 1200px){
-      padding-bottom: 56px;
+      padding-bottom: 50px;
     }
   }
 
   .main-button {
-    padding-top: 66px;
+    padding-top: 60px;
     padding-bottom: 60px;
     background-color: var(--primary--bg-color);
     @media screen and (min-width: 1200px){
